--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,4 +1,5 @@
-$blue: rgba(169, 204, 227, .7);
-$primary: #117A65;
-$primaryLight: rgba($primary, .7);
+$blue: rgba(169, 204, 227, 0.7);
+$primary: #117a65;
+$primaryLight: rgba($primary, 0.7);
 $headerHeight: 80px;
+$timeAnimOpacity: 0.4s;
