--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,2 +1,17 @@
-<h1 [routerLink]="">My Blog</h1>
-<button>Login</button>
+<div class="header">
+  <h1 [routerLink]="">My Blog</h1>
+  <div class="header__user">
+    <p *ngIf="_sessionStorageService.getSession()" class="header__user-name">
+      Hello {{ _sessionStorageService.getSession().login }}
+    </p>
+    <button
+      *ngIf="!_sessionStorageService.getSession()"
+      (click)="_modalService.showModal$.next(true)"
+    >
+      Login
+    </button>
+    <button *ngIf="_sessionStorageService.getSession()" (click)="logout()">
+      Logout
+    </button>
+  </div>
+</div>
