--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 @import "src/variables";
 
-:host {
+.header {
   position: fixed;
   width: 100%;
   background-color: $blue;
@@ -8,6 +8,7 @@
   display: flex;
   align-items: center;
   top: 0;
+  justify-content: space-between;
   h1 {
     color: white;
     font-size: 24px;
@@ -18,8 +19,19 @@
     width: 250px;
     cursor: pointer;
   }
+  &__user {
+    margin: 16px;
+    display: flex;
+    align-items: center;
+  }
+  &__user-name {
+    color: $primary;
+    margin: 0 32px 0;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 25px;
+  }
   button {
-    margin: 16px 16px 16px auto;
     width: 144px;
   }
 }
