Переименовал интерфейс и некоторые переменные. Переделал стуктуру файлов - разделил на дерриктории. Небольшие стилевые правки

--- a/src/app/components/form-input/form-input.component.html
+++ b/src/app/components/form-input/form-input.component.html
@@ -1,7 +1,9 @@
 <div class="form-input">
   <p class="form-input__title">{{ title }}</p>
   <div class="form-input__field">
-    <input [formControl]="fc" [type]="type" />
+    <label>
+      <input [formControl]="fc" [type]="type" />
+    </label>
     <p *ngIf="errorMessage" class="form-input__error">{{ errorMessage }}</p>
   </div>
 </div>
