--- a/src/app/components/main-item/main-item.component.html
+++ b/src/app/components/main-item/main-item.component.html
@@ -1,5 +1,5 @@
 <div class="main-item" [routerLink]="['/view-post', post.id]">
-  <h3>{{ post.title }}</h3>
+  <h3 class="header-post">{{ post.title }}</h3>
   <div class="main-item__content">
     <div class="main-item__description">
       <p class="main-item__text truncate-text">{{ post.description }}</p>
