--- a/src/app/components/modal/modal.component.html
+++ b/src/app/components/modal/modal.component.html
@@ -1,7 +1,7 @@
 <div class="modal">
   <div class="modal__content">
     <div class="modal__header">
-      <div class="modal__close" (click)="_modalService.showModal$.next(false)">
+      <div class="modal__close" (click)="modalService.showModal$.next(false)">
         <span>🞩</span>
       </div>
       <h2>
