--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,6 +1,6 @@
 <main>
   <app-floating-action-button
-    *ngIf="_sessionStorageService.getSession()"
+    *ngIf="userService.checkSessionUser() | async"
     (clickBtn)="fabHandler()"
   ></app-floating-action-button>
   <ul>
