Реализация material design, удалил не нужные компоненты, реализация новых компонентов и сервисов, мелкие багофиксы, правка семантической вёрстки, изменение структуры файлов, рефакторинг.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,10 @@
-@import "src/variables";
-
 .app-content {
-  margin-top: $headerHeight;
-  max-width: $width;
+  margin-top: 64px;
+  padding: 16px;
+  @media (max-width: 599px) {
+    margin-top: 56px;
+  }
+  max-width: 750px;
   margin-left: auto;
   margin-right: auto;
 }
