--- a/src/app/components/main-item/main-item.component.scss
+++ b/src/app/components/main-item/main-item.component.scss
@@ -4,54 +4,23 @@
 :host {
   display: flex;
   justify-content: center;
-}
-
-.main-item {
-  width: 100%;
   cursor: pointer;
   transition: $timeAnimOpacity;
   @include opacityAnimShow;
-  &:hover {
-    transition: $timeAnimOpacity;
-    background-color: whitesmoke;
+  mat-card {
+    width: 100%;
   }
-  h3 {
+  mat-card-footer {
     margin: 0;
-  }
-  &__text {
-    font-size: 12px;
-    line-height: 16px;
-    font-weight: 400;
-    margin: 0;
-  }
-  &__text--truncate {
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 4;
-    -webkit-box-orient: vertical;
-    text-overflow: ellipsis;
-  }
-  &__content {
-    padding: 40px 18px 24px 18px;
-    border-width: 0 1px 1px;
-    border-color: #e8f6f3;
-    border-style: solid;
-    border-radius: 0 0 2px 2px;
-  }
-  &__description {
-    height: 88px;
-  }
-  &__info {
     display: flex;
     justify-content: space-between;
-    margin: 0;
   }
-  &__source {
-    opacity: 0.7;
-    margin: 0;
-  }
-  &__date {
+  text {
     opacity: 0.7;
     font-weight: 700;
+  }
+  address {
+    opacity: 0.7;
+    margin: 0;
   }
 }
