Переделал работу между диалоговыми окнами. Рефакторинг кода. Добавил TODO теги. Переделал применение material.theme.scss. Изменил правила для import в tslint.json

--- a/src/app/components/dialogs/registration-form-dialog/registration-form-dialog.component.html
+++ b/src/app/components/dialogs/registration-form-dialog/registration-form-dialog.component.html
@@ -31,6 +31,7 @@
   </form>
 </mat-dialog-content>
 <mat-dialog-actions>
+  <button mat-button color="primary" (click)="backHandler()">Back</button>
   <button
     mat-raised-button
     color="accent"
