--- a/src/app/pages/view-post/view-post.component.scss
+++ b/src/app/pages/view-post/view-post.component.scss
@@ -1,4 +1,4 @@
-@import "../../../variables";
+@import "src/variables";
 :host mat-card-actions {
   display: flex;
   justify-content: space-between;
