--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,10 +1,5 @@
 <main>
-  <button
-    mat-fab
-    color="primary"
-    *ngIf="userService.checkSessionUser() | async"
-    (click)="fabHandler()"
-  >
+  <button mat-fab color="primary" *ngIf="isAuthUser" (click)="fabHandler()">
     <mat-icon>add</mat-icon>
   </button>
   <ul>
