Поправил переходы назад на экранах post и view-post. Поправил название проекта. Добавил тег "noscript"

--- a/src/app/pages/post/post.component.html
+++ b/src/app/pages/post/post.component.html
@@ -23,7 +23,7 @@
         [style.marginRight]="'16px'"
         mat-button
         color="primary"
-        [routerLink]="'/main'"
+        (click)="cancelBtnHandler()"
       >
         CANCEL
       </button>
