--- a/src/app/pages/view-post/view-post.component.html
+++ b/src/app/pages/view-post/view-post.component.html
@@ -7,7 +7,9 @@
     >
     <mat-card-content>{{ post.description }}</mat-card-content>
     <mat-card-actions>
-      <button mat-button color="primary" [routerLink]="'/main'">BACK</button>
+      <button mat-button color="primary" (click)="backBtnHandler()">
+        BACK
+      </button>
       <button
         *ngIf="isEdit()"
         mat-raised-button
