--- a/src/app/pages/post/post.component.html
+++ b/src/app/pages/post/post.component.html
@@ -1,4 +1,4 @@
-<main>
+<main class="content-column-center">
   <form [formGroup]="postFG">
     <mat-form-field appearance="outline">
       <mat-label>Title</mat-label>
