--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <app-header></app-header>
 </header>
-<div class="app-content">
+<div class="offset-header">
   <router-outlet></router-outlet>
 </div>
