--- a/src/app/components/main-item/main-item.component.scss
+++ b/src/app/components/main-item/main-item.component.scss
@@ -1,26 +1,38 @@
 @import "src/variables";
 @import "src/mixins";
 
-:host {
-  display: flex;
-  justify-content: center;
+.main-item {
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  border-radius: 8px;
+  box-shadow: 3px 3px 8px grey;
   cursor: pointer;
-  transition: $timeAnimOpacity;
-  @include opacityAnimShow;
-  mat-card {
+  padding: 16px;
+  &__content {
     width: 100%;
+    height: 100%;
+    position: relative;
   }
-  mat-card-footer {
-    margin: 0;
+  &__title {
+    @include text-truncate(1);
+  }
+  &__description {
+    @include text-truncate(3);
+  }
+  &__footer {
     display: flex;
     justify-content: space-between;
-  }
-  text {
-    opacity: 0.7;
-    font-weight: 700;
-  }
-  address {
-    opacity: 0.7;
-    margin: 0;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+    text {
+      opacity: 0.7;
+      font-weight: 700;
+    }
+    address {
+      opacity: 0.7;
+      margin: 0;
+    }
   }
 }
