--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -1,7 +1,4 @@
 :host {
-  h2 {
-    color: blue;
-  }
   button {
     position: fixed;
     bottom: 32px;
@@ -12,10 +9,17 @@
     &:not(:first-child) {
       padding-top: 24px;
     }
+    article {
+      width: 100%;
+      height: 100%;
+    }
   }
-  .progress {
-    display: flex;
-    justify-content: center;
-    padding: 16px 0;
+  cdk-virtual-scroll-viewport {
+    width: 100%;
+    height: calc(100vh - 64px);
+    @media (max-width: 599px) {
+      height: calc(100vh - 56px);
+    }
   }
+  // TODO пришлось удлать loader, почему-то он отображатется всего один раз
 }
