--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,22 @@ ul {
   margin: 0;
   padding: 0;
 }
+
+.offset-header {
+  margin-top: 64px;
+  @media (max-width: 599px) {
+    margin-top: 56px;
+  }
+}
+
+// TODO проверить/пофиксить все стили проекта на предмет дублирования
+.content-column-center {
+  padding: 16px;
+  max-width: 750px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.cdk-virtual-scroll-content-wrapper {
+  width: 100%;
+}
