--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/placeholders";
+
 :host {
   button {
     position: fixed;
@@ -10,8 +12,7 @@
       padding-top: 24px;
     }
     article {
-      width: 100%;
-      height: 100%;
+      @extend %wh-100-percent;
     }
   }
   cdk-virtual-scroll-viewport {
