--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-@import "src/variables";
-
 *:focus {
   outline: none;
 }
@@ -13,14 +10,16 @@ ul {
   margin: 0;
   padding: 0;
 }
-
+form {
+  display: flex;
+  flex-direction: column;
+}
 .offset-header {
   margin-top: 64px;
   @media (max-width: 599px) {
     margin-top: 56px;
   }
 }
-
 // TODO проверить/пофиксить все стили проекта на предмет дублирования
 .content-column-center {
   padding: 16px;
@@ -28,7 +27,6 @@ ul {
   margin-left: auto;
   margin-right: auto;
 }
-
 .cdk-virtual-scroll-content-wrapper {
   width: 100%;
 }
