Реализация генерации material тем через mixin. Реализация переключения между dark и contrast вариантами тем

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -29,6 +29,26 @@
 </mat-menu>
 
 <mat-menu #themesMenu="matMenu">
+  <div class="customMatMenuItem">
+    <mat-slide-toggle
+      class="mat-menu-item"
+      #darkToggle
+      [(ngModel)]="isDark"
+      (change)="toggleHandler($event)"
+      (click)="$event.stopPropagation()"
+      >Dark</mat-slide-toggle
+    >
+  </div>
+  <div class="customMatMenuItem">
+    <mat-slide-toggle
+      class="mat-menu-item"
+      #contrastToggle
+      [(ngModel)]="isContrast"
+      (change)="toggleHandler($event)"
+      (click)="$event.stopPropagation()"
+      >Contrast</mat-slide-toggle
+    >
+  </div>
   <button
     *ngFor="let theme of this.themeService.getThemes()"
     mat-menu-item
